# CASM

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GRAMMAR.md  IMPLEMENTATION.md  Makefile  README.md  guide.md  meson.build
docs/: QUICKSTART.md  README.md
example/: hw.casm
examples/: data.casm  example.casm  factorial.casm  function.casm  hello.casm  hello_world.casm  loop.casm
include/: coil.h  coil_asm.h  coil_disasm.h
include/casm/: assembler.h  assembler.hpp  casm.hpp  code_generator.h  codegen.hpp  directive_handler.h  disasm.hpp  error_handler.h  lexer.h  lexer.hpp  parser.h  parser.hpp  symbol_table.h  token.h  token.hpp  types.hpp
src/: assembler.cpp  casm.cpp  casm_lib.cpp  code_generator.cpp  code_generator.h  codegen.cpp  directive_handler.cpp  disasm.cpp  error_handler.cpp  lexer.cpp  lexer.h  main.c  main.cpp  parser.cpp  parser.h  symbol_table.cpp  symbol_table.h  token.cpp  types.h
src/assembler/: asm.h  encoder.h  lexer.h  parser.h
src/common/: error.h  object.h  opcodes.h  types.h
src/disassembler/: decoder.h  disasm.h  formatter.h
tests/: CMakeLists.txt  meson.build  test.casm  test_assembler.cpp  test_casm.cpp  test_codegen.cpp  test_lexer.cpp  test_parser.cpp
